--- a/components/calendar.html
+++ b/components/calendar.html
@@ -3,270 +3,9 @@ title: Calendar
 layout: documentation
 doc-tab: components
 doc-subtab: calendar
-npm-version: 4.0.1
-variables:
-- name: $calendar-border
-  value: .1rem solid $grey-lighter
-- name: $calendar-border-radius
-  value: $radius
-- name: $calendar-header-color
-  value: $primary
-- name: $calendar-date-hover
-  value: $white-ter
-- name: $calendar-today-background
-  value: transparent
-- name: $calendar-today-border-color
-  value: $primary
-- name: $calendar-today-color
-  value: $primary
-jsEvents:
-- name: datepicker:ready
-  description: triggered when DatePicker instance is ready to be used
-- name: datepicker:rendered
-  description: Triggered once per datepicker instanciation
-- name: datepicker:show
-  description: Triggered each time datepicker is showed
-- name: datepicker:hide
-  description: Triggered when datepicker is closed
-- name: datepicker:date:selected
-  description: Triggered when a date is selected
-jsOptions:
-- name: startDate
-  description: Date selected by default when Datepicker is displayed
-  value: new Date()
-- name: weekStart
-  description: Weekstart day (by default defined by language)
-  value: 'null'
-- name: minDate
-  description: Minimum date selectable
-  value: 'null'
-- name: maxDate
-  description: Maximum Date selectable
-  value: 'null'
-- name: disabledDates
-  description: Dates to display in calendar
-  value: 'null'
-- name: dateFormat
-  description: Date format to use (to change order or separator). See moment.js documentation for supported formats
-  value: 'yyyy-mm-dd'
-- name: lang
-  description: Lang in which display content (month and day names)
-  value: 'en'
-- name: overlay
-  description: Display the Datepicker in fullscreen using an overlay ?
-  value: false
-- name: closeOnOverlayClick
-  description: Close the Datepicker when clicking on the overlay ?
-  value: true
-- name: closeOnSelect
-  description: Close the Datepicker when selecting a date ?
-  value: true
-- name: toggleOnInputClick
-  description: Activate/Deactivate show on input click (if false then call bulmaCalendarInstance.show() to display the datePicker)
-  value: true
-- name: icons.month.previous
-  description: Html content for previous month arrow
-  value: inline svg
-- name: icons.month.next
-  description: Html content for next month arrow
-  value: inline svg
-- name: icons.year.previous
-  description: Html content for previous year arrow
-  value: inline svg
-- name: icons.year.previous
-  description: Html content for previous year arrow
-  value: inline svg
+npm-version: 5.0.1
 ---
 
-{% include subnav-components.html %}
-
-{% capture calendar_js_code %}
-document.addEventListener('DOMContentLoaded', function () {
-  var datePickers = bulmaCalendar.attach('[type="date"]', {
-    overlay: true,
-    minDate: '2018-01-01',
-    maxDate: '2018-12-31'
-  });
-  // datePickers now contains an Array of all datePicker instances
-  // To use Events API jus add a listener like below:
-  // datepickerInstance.on(event, function(datepicker) {});
-});
-{% endcapture %}
-
-{% capture calendar_example %}
-<div class="calendar">
-  <div class="calendar-nav">
-    <div class="calendar-nav-previous-month">
-      <button class="button is-small is-text">
-        <svg viewBox="0 0 50 80" xml:space="preserve">
-          <polyline fill="none" stroke-width=".5em" stroke-linecap="round" stroke-linejoin="round" points="45.63,75.8 0.375,38.087 45.63,0.375 "></polyline>
-        </svg>
-      </button>
-    </div>
-    <div class="calendar-month">March 2017</div>
-    <div class="calendar-nav-next-month">
-      <button class="button is-small is-text">
-        <svg viewBox="0 0 50 80" xml:space="preserve">
-          <polyline fill="none" stroke-width=".5em" stroke-linecap="round" stroke-linejoin="round" points="0.375,0.375 45.63,38.087 0.375,75.8 "></polyline>
-        </svg>
-      </button>
-    </div>
-  </div>
-  <div class="calendar-container">
-    <div class="calendar-header">
-      <div class="calendar-date">Sun</div>
-      <div class="calendar-date">Mon</div>
-      <div class="calendar-date">Tue</div>
-      <div class="calendar-date">Wed</div>
-      <div class="calendar-date">Thu</div>
-      <div class="calendar-date">Fri</div>
-      <div class="calendar-date">Sat</div>
-    </div>
-    <div class="calendar-body">
-      <div class="calendar-date is-disabled"><button class="date-item">26</button></div>
-      <div class="calendar-date is-disabled"><button class="date-item">27</button></div>
-      <div class="calendar-date is-disabled"><button class="date-item">28</button></div>
-      <div class="calendar-date"><button class="date-item">1</button></div>
-      <div class="calendar-date"><button class="date-item">2</button></div>
-      <div class="calendar-date"><button class="date-item">3</button></div>
-      <div class="calendar-date tooltip" data-tooltip="Today"><button class="date-item is-today">4</button></div>
-      <div class="calendar-date tooltip" data-tooltip="Not available" disabled=""><button class="date-item">5</button></div>
-      <div class="calendar-date"><button class="date-item">6</button></div>
-      <div class="calendar-date"><button class="date-item">7</button></div>
-      <div class="calendar-date tooltip" data-tooltip="You have appointments"><button class="date-item">8</button></div>
-      <div class="calendar-date"><button class="date-item">9</button></div>
-      <div class="calendar-date"><button class="date-item">10</button></div>
-      <div class="calendar-date"><button class="date-item">11</button></div>
-      <div class="calendar-date"><button class="date-item">12</button></div>
-      <div class="calendar-date"><button class="date-item">13</button></div>
-      <div class="calendar-date"><button class="date-item">14</button></div>
-      <div class="calendar-date"><button class="date-item">15</button></div>
-      <div class="calendar-date calendar-range calendar-range-start"><button class="date-item is-active">16</button></div>
-      <div class="calendar-date calendar-range"><button class="date-item">17</button></div>
-      <div class="calendar-date calendar-range"><button class="date-item">18</button></div>
-      <div class="calendar-date calendar-range"><button class="date-item">19</button></div>
-      <div class="calendar-date calendar-range calendar-range-end"><button class="date-item is-active">20</button></div>
-      <div class="calendar-date"><button class="date-item">21</button></div>
-      <div class="calendar-date"><button class="date-item">22</button></div>
-      <div class="calendar-date"><button class="date-item">23</button></div>
-      <div class="calendar-date"><button class="date-item">24</button></div>
-      <div class="calendar-date"><button class="date-item">25</button></div>
-      <div class="calendar-date"><button class="date-item">26</button></div>
-      <div class="calendar-date"><button class="date-item">27</button></div>
-      <div class="calendar-date"><button class="date-item">28</button></div>
-      <div class="calendar-date"><button class="date-item">29</button></div>
-      <div class="calendar-date"><button class="date-item">30</button></div>
-      <div class="calendar-date"><button class="date-item">31</button></div>
-      <div class="calendar-date is-disabled"><button class="date-item">1</button></div>
-    </div>
-  </div>
-</div>
-{% endcapture %}
-
-{% capture calendar_sizes_example %}
-<div class="calendar is-large">
-  <div class="calendar-nav">
-    <div class="calendar-nav-previous-month">
-      <button class="button is-small is-text">
-        <svg viewBox="0 0 50 80" xml:space="preserve">
-          <polyline fill="none" stroke-width=".5em" stroke-linecap="round" stroke-linejoin="round" points="45.63,75.8 0.375,38.087 45.63,0.375 "></polyline>
-        </svg>
-      </button>
-    </div>
-    <div class="calendar-month">March 2017</div>
-    <div class="calendar-nav-next-month">
-      <button class="button is-small is-text">
-        <svg viewBox="0 0 50 80" xml:space="preserve">
-          <polyline fill="none" stroke-width=".5em" stroke-linecap="round" stroke-linejoin="round" points="0.375,0.375 45.63,38.087 0.375,75.8 "></polyline>
-        </svg>
-      </button>
-    </div>
-  </div>
-  <div class="calendar-container">
-    <div class="calendar-header">
-      <div class="calendar-date">Sun</div>
-      <div class="calendar-date">Mon</div>
-      <div class="calendar-date">Tue</div>
-      <div class="calendar-date">Wed</div>
-      <div class="calendar-date">Thu</div>
-      <div class="calendar-date">Fri</div>
-      <div class="calendar-date">Sat</div>
-    </div>
-    <div class="calendar-body">
-      <div class="calendar-date is-disabled"><button class="date-item">26</button></div>
-      <div class="calendar-date is-disabled">
-        <button class="date-item">27</button>
-        <div class="calendar-events">
-          <a class="calendar-event">Default event</a>
-        </div>
-      </div>
-      <div class="calendar-date is-disabled"><button class="date-item">28</button></div>
-      <div class="calendar-date"><button class="date-item">1</button></div>
-      <div class="calendar-date"><button class="date-item">2</button></div>
-      <div class="calendar-date"><button class="date-item">3</button></div>
-      <div class="calendar-date"><button class="date-item is-today">4</button></div>
-      <div class="calendar-date" disabled=""><button class="date-item">5</button></div>
-      <div class="calendar-date"><button class="date-item">6</button></div>
-      <div class="calendar-date"><button class="date-item">7</button></div>
-      <div class="calendar-date">
-        <button class="date-item badge">8</button>
-        <div class="calendar-events">
-          <a class="calendar-event is-primary">Primary event</a>
-          <a class="calendar-event is-warning">Warning event</a>
-          <a class="calendar-event is-danger">Danger event</a>
-        </div>
-      </div>
-      <div class="calendar-date"><button class="date-item">9</button></div>
-      <div class="calendar-date"><button class="date-item">10</button></div>
-      <div class="calendar-date"><button class="date-item">11</button></div>
-      <div class="calendar-date">
-        <button class="date-item">12</button>
-        <div class="calendar-events">
-          <a class="calendar-event">Default event</a>
-        </div>
-      </div>
-      <div class="calendar-date"><button class="date-item">13</button></div>
-      <div class="calendar-date"><button class="date-item">14</button></div>
-      <div class="calendar-date"><button class="date-item">15</button></div>
-      <div class="calendar-date calendar-range calendar-range-start"><button class="date-item is-active">16</button></div>
-      <div class="calendar-date calendar-range"><button class="date-item">17</button></div>
-      <div class="calendar-date calendar-range"><button class="date-item">18</button></div>
-      <div class="calendar-date calendar-range"><button class="date-item">19</button></div>
-      <div class="calendar-date calendar-range calendar-range-end">
-        <button class="date-item is-active">20</button>
-        <div class="calendar-events">
-          <a class="calendar-event is-success">Success event</a>
-        </div>
-      </div>
-      <div class="calendar-date"><button class="date-item">21</button></div>
-      <div class="calendar-date"><button class="date-item">22</button></div>
-      <div class="calendar-date"><button class="date-item">23</button></div>
-      <div class="calendar-date"><button class="date-item">24</button></div>
-      <div class="calendar-date"><button class="date-item">25</button></div>
-      <div class="calendar-date"><button class="date-item">26</button></div>
-      <div class="calendar-date"><button class="date-item">27</button></div>
-      <div class="calendar-date"><button class="date-item">28</button></div>
-      <div class="calendar-date"><button class="date-item">29</button></div>
-      <div class="calendar-date"><button class="date-item">30</button></div>
-      <div class="calendar-date"><button class="date-item">31</button></div>
-      <div class="calendar-date is-disabled">
-        <button class="date-item">1</button>
-        <div class="calendar-events">
-          <a class="calendar-event">Second default event</a>
-        </div>
-      </div>
-    </div>
-  </div>
-</div>
-{% endcapture %}
-
-{% capture calendar_datepicker_example %}
-<input id="datepickerDemo" class="input" type="date">
-{% endcapture %}
-
-{% capture calendar_datepicker_overlay_example %}
-<input id="datepickerDemo2" class="input" type="date" value="2018-02-11">
-{% endcapture %}
 
 <section class="section">
   <div class="container">
@@ -298,80 +37,11 @@ document.addEventListener('DOMContentLoaded', function () {
         </div>
       </div>
     </div>
-    {%
-      include meta.html
-      sizes=true
-      variables=true
-      javascript=true
-    %}
-
-    <hr>
-
-    {% include snippet.html content=calendar_example size="one-half" more=true %}
-
-    {% include anchor.html name="Sizes" %}
-    <p>You can use the <code>is-large</code> modifier to display a large detailed calendar.</p>
-    {% include snippet.html content=calendar_sizes_example horizontal=true more=true %}
-
-    {% include variables.html %}
-
-
-    {% include anchor.html name="Javascript" %}
-    <div class="columns">
-      <div class="column is-half">
-        <div class="bd-example">
-          <h4 class="title is-4">Default</h4>
-          {{calendar_datepicker_example}}
-        </div>
-        {% highlight html %}{{calendar_datepicker_example}}{% endhighlight %}
-      </div>
-      <div class="column is-half">
-        <div class="bd-example">
-          <h4 class="title is-4">Overlay</h4>
-          <h5 class="subtitle is-6">set <code>overlay</code> option to <code>true</code></h5>
-          {{calendar_datepicker_overlay_example}}
-        </div>
-        {% highlight html %}{{calendar_datepicker_overlay_example}}{% endhighlight %}
-      </div>
-    </div>
-
-    <div class="message is-info">
-      <h4 class="message-header">Javascript</h4>
+    <article class="message is-warning">
       <div class="message-body">
-        <div class="content">
-          <p>
-            The extension comes with a JavaScript implementation to handle the DatePicker input.
-          </p>
-
-          {% highlight javascript %}{{calendar_js_code}}{% endhighlight %}
-        </div>
+        Full documentation and demos of this component are now available on <a href="http://creativebulma.net//product/calendar"
+          target="_blank">CreativeBulma</a>.
       </div>
-    </div>
-
-    {% include jsEvents.html %}
-
-    {% include jsOptions.html %}
-
-    events:
-
-    <script type="text/javascript" src="{{ site.url}}/node_modules/bulma-extensions/bulma-calendar/dist/js/bulma-calendar.min.js"></script>
-    <script type="text/javascript">
-    var calendars = bulmaCalendar.attach('#datepickerDemo');
-    console.log(calendars);
-    window.setTimeout(function() {
-      [].forEach.call(calendars, function(calendar) {
-      console.log(calendar);
-      calendar.on('datepicker:date:selected', function(datePicker) {
-        alert('Selected date: ' + datePicker.date);
-      });
-    })}, 100);
-    
-    
-    bulmaCalendar.attach('#datepickerDemo2', {
-      overlay: true,
-      minDate: '2018-01-01',
-      maxDate: '2018-12-31'
-    });
-    </script>
+    </article>
   </div>
 </section>
