--- a/components/calendar.html
+++ b/components/calendar.html
@@ -6,6 +6,7 @@ doc-subtab: calendar
 npm-version: 5.0.1
 ---
 
+{% include subnav-components.html %}
 
 <section class="section">
   <div class="container">
