update carousel demo page

--- a/components/carousel.html
+++ b/components/carousel.html
@@ -4,312 +4,10 @@ description: Display a Image / Content carousel
 layout: documentation
 doc-tab: components
 doc-subtab: carousel
-npm-version: 2.0.14
-variables:
-- name: $carousel-nav-background
-  value: rgba($white, 0.7)
-- name: $carousel-nav-color
-  value: $text
-- name: $carousel-title-background
-  value: rgba($white, 0.6)
-- name: $carousel-title-size
-  value: $size-7
+npm-version: 4.0.1
 ---
 
 {% include subnav-components.html %}
-
-{% capture carousel_example %}
-<div class='carousel carousel-animated carousel-animate-slide'>
-  <div class='carousel-container'>
-    <div class='carousel-item has-background is-active'>
-      <img class="is-background" src="{{ site.url }}/images/merry-christmas.jpg" alt="" width="640" height="310" />
-      <div class="title">Merry Christmas</div>
-    </div>
-    <div class='carousel-item has-background'>
-      <img class="is-background" src="{{ site.url }}/images/singer.jpg" alt="" width="640" height="310" />
-      <div class="title">Original Gift: Offer a song with <a href="https://lasongbox.com" target="_blank">La Song Box</a></div>
-    </div>
-    <div class='carousel-item has-background'>
-      <img class="is-background" src="{{ site.url }}/images/sushi.jpg" alt="" width="640" height="310" />
-      <div class="title">Sushi time</div>
-    </div>
-    <div class='carousel-item has-background'>
-      <img class="is-background" src="{{ site.url }}/images/life.jpg" alt="" width="640" height="310" />
-      <div class="title">Life</div>
-    </div>
-  </div>
-  <div class="carousel-navigation">
-    <div class="carousel-nav-left">
-      <i class="fa fa-chevron-left" aria-hidden="true"></i>
-    </div>
-    <div class="carousel-nav-right">
-      <i class="fa fa-chevron-right" aria-hidden="true"></i>
-    </div>
-  </div>
-</div>
-{% endcapture %}
-
-{% capture carousel_fade_example %}
-<div class='carousel carousel-animated carousel-animate-fade'>
-  <div class='carousel-container'>
-    <div class='carousel-item has-background is-active'>
-      <img class="is-background" src="{{ site.url }}/images/merry-christmas.jpg" alt="" width="640" height="310" />
-      <div class="title">Merry Christmas</div>
-    </div>
-    <div class='carousel-item has-background'>
-      <img class="is-background" src="{{ site.url }}/images/singer.jpg" alt="" width="640" height="310" />
-      <div class="title">Original Gift: Offer a song with <a href="https://lasongbox.com" target="_blank">La Song Box</a></div>
-    </div>
-    <div class='carousel-item has-background'>
-      <img class="is-background" src="{{ site.url }}/images/sushi.jpg" alt="" width="640" height="310" />
-      <div class="title">Sushi time</div>
-    </div>
-    <div class='carousel-item has-background'>
-      <img class="is-background" src="{{ site.url }}/images/life.jpg" alt="" width="640" height="310" />
-      <div class="title">Life</div>
-    </div>
-  </div>
-  <div class="carousel-navigation">
-    <div class="carousel-nav-left">
-      <i class="fa fa-chevron-left" aria-hidden="true"></i>
-    </div>
-    <div class="carousel-nav-right">
-      <i class="fa fa-chevron-right" aria-hidden="true"></i>
-    </div>
-  </div>
-</div>
-{% endcapture %}
-
-{% capture carousel_5_example %}
-<div class='carousel carousel-animated carousel-animate-slide' data-size="5">
-  <div class='carousel-container'>
-    <div class='carousel-item is-active'>
-      <figure class="image is-2by1"><img src="https://bulma.io/images/placeholders/640x320.png"></figure>
-    </div>
-    <div class='carousel-item'>
-      <figure class="image is-2by1"><img src="https://bulma.io/images/placeholders/640x320.png"></figure>
-    </div>
-    <div class='carousel-item'>
-      <figure class="image is-2by1"><img src="https://bulma.io/images/placeholders/640x320.png"></figure>
-    </div>
-    <div class='carousel-item'>
-      <figure class="image is-2by1"><img src="https://bulma.io/images/placeholders/640x320.png"></figure>
-    </div>
-    <div class='carousel-item'>
-      <figure class="image is-2by1"><img src="https://bulma.io/images/placeholders/640x320.png"></figure>
-    </div>
-    <div class='carousel-item'>
-      <figure class="image is-2by1"><img src="https://bulma.io/images/placeholders/640x320.png"></figure>
-    </div>
-    <div class='carousel-item'>
-      <figure class="image is-2by1"><img src="https://bulma.io/images/placeholders/640x320.png"></figure>
-    </div>
-  </div>
-  <div class="carousel-navigation is-centered">
-    <div class="carousel-nav-left">
-      <i class="fa fa-chevron-left" aria-hidden="true"></i>
-    </div>
-    <div class="carousel-nav-right">
-      <i class="fa fa-chevron-right" aria-hidden="true"></i>
-    </div>
-  </div>
-</div>
-{% endcapture %}
-
-{% capture carousel_navigation_centered_example %}
-<div class='carousel carousel-animated carousel-animate-slide'>
-  <div class='carousel-container'>
-    <div class='carousel-item has-background is-active'>
-      <img class="is-background" src="{{ site.url }}/images/merry-christmas.jpg" alt="" width="640" height="310" />
-      <div class="title">Merry Christmas</div>
-    </div>
-    <div class='carousel-item has-background'>
-      <img class="is-background" src="{{ site.url }}/images/singer.jpg" alt="" width="640" height="310" />
-      <div class="title">Original Gift: Offer a song with <a href="https://lasongbox.com" target="_blank">La Song Box</a></div>
-    </div>
-    <div class='carousel-item has-background'>
-      <img class="is-background" src="{{ site.url }}/images/sushi.jpg" alt="" width="640" height="310" />
-      <div class="title">Sushi time</div>
-    </div>
-    <div class='carousel-item has-background'>
-      <img class="is-background" src="{{ site.url }}/images/life.jpg" alt="" width="640" height="310" />
-      <div class="title">Life</div>
-    </div>
-  </div>
-  <div class="carousel-navigation is-centered">
-    <div class="carousel-nav-left">
-      <i class="fa fa-chevron-left" aria-hidden="true"></i>
-    </div>
-    <div class="carousel-nav-right">
-      <i class="fa fa-chevron-right" aria-hidden="true"></i>
-    </div>
-  </div>
-</div>
-{% endcapture %}
-
-{% capture carousel_navigation_overlay_example %}
-<div class='carousel carousel-animated carousel-animate-slide'>
-  <div class='carousel-container'>
-    <div class='carousel-item has-background is-active'>
-      <img class="is-background" src="{{ site.url }}/images/merry-christmas.jpg" alt="" width="640" height="310" />
-      <div class="title">Merry Christmas</div>
-    </div>
-    <div class='carousel-item has-background'>
-      <img class="is-background" src="{{ site.url }}/images/singer.jpg" alt="" width="640" height="310" />
-      <div class="title">Original Gift: Offer a song with <a href="https://lasongbox.com" target="_blank">La Song Box</a></div>
-    </div>
-    <div class='carousel-item has-background'>
-      <img class="is-background" src="{{ site.url }}/images/sushi.jpg" alt="" width="640" height="310" />
-      <div class="title">Sushi time</div>
-    </div>
-    <div class='carousel-item has-background'>
-      <img class="is-background" src="{{ site.url }}/images/life.jpg" alt="" width="640" height="310" />
-      <div class="title">Life</div>
-    </div>
-  </div>
-  <div class="carousel-navigation is-overlay">
-    <div class="carousel-nav-left">
-      <i class="fa fa-chevron-left" aria-hidden="true"></i>
-    </div>
-    <div class="carousel-nav-right">
-      <i class="fa fa-chevron-right" aria-hidden="true"></i>
-    </div>
-  </div>
-</div>
-{% endcapture %}
-
-
-{% capture carousel_autoplay_example %}
-<div class='carousel carousel-animated carousel-animate-slide' data-autoplay="true">
-  <div class='carousel-container'>
-    <div class='carousel-item has-background is-active'>
-      <img class="is-background" src="{{ site.url }}/images/merry-christmas.jpg" alt="" width="640" height="310" />
-      <div class="title">Merry Christmas</div>
-    </div>
-    <div class='carousel-item has-background'>
-      <img class="is-background" src="{{ site.url }}/images/singer.jpg" alt="" width="640" height="310" />
-      <div class="title">Original Gift: Offer a song with <a href="https://lasongbox.com" target="_blank">La Song Box</a></div>
-    </div>
-    <div class='carousel-item has-background'>
-      <img class="is-background" src="{{ site.url }}/images/sushi.jpg" alt="" width="640" height="310" />
-      <div class="title">Sushi time</div>
-    </div>
-    <div class='carousel-item has-background'>
-      <img class="is-background" src="{{ site.url }}/images/life.jpg" alt="" width="640" height="310" />
-      <div class="title">Life</div>
-    </div>
-  </div>
-  <div class="carousel-navigation is-centered">
-    <div class="carousel-nav-left">
-      <i class="fa fa-chevron-left" aria-hidden="true"></i>
-    </div>
-    <div class="carousel-nav-right">
-      <i class="fa fa-chevron-right" aria-hidden="true"></i>
-    </div>
-  </div>
-</div>
-{% endcapture %}
-
-{% capture hero_carousel_example %}
-<section class="hero is-medium has-carousel">
-  <div class="hero-carousel carousel-animated carousel-animate-fade">
-    <div class='carousel-container'>
-      <div class='carousel-item has-background is-active'>
-        <img class="is-background" src="{{ site.url }}/images/merry-christmas.jpg" alt="" />
-      </div>
-      <div class='carousel-item has-background'>
-        <img class="is-background" src="{{ site.url }}/images/singer.jpg" alt="" />
-      </div>
-      <div class='carousel-item has-background'>
-        <img class="is-background" src="{{ site.url }}/images/sushi.jpg" alt="" />
-      </div>
-      <div class='carousel-item has-background'>
-        <img class="is-background" src="{{ site.url }}/images/life.jpg" alt="" />
-      </div>
-    </div>
-    <div class="carousel-navigation is-overlay">
-      <div class="carousel-nav-left">
-        <i class="fa fa-chevron-left" aria-hidden="true"></i>
-      </div>
-      <div class="carousel-nav-right">
-        <i class="fa fa-chevron-right" aria-hidden="true"></i>
-      </div>
-    </div>
-  </div>
-  <div class="hero-head">
-    <nav class="navbar is-transparent">
-      <div class="container">
-        <div class="navbar-brand">
-          <a class="navbar-item">
-            <img src="https://bulma.io/images/bulma-type-white.png" alt="Logo">
-          </a>
-          <span class="navbar-burger burger" data-target="navbarMenuHeroA">
-            <span></span>
-            <span></span>
-            <span></span>
-          </span>
-        </div>
-        <div id="navbarMenuHeroA" class="navbar-menu">
-          <div class="navbar-end">
-            <a class="navbar-item has-text-white is-active">
-              Home
-            </a>
-            <a class="navbar-item has-text-white">
-              Examples
-            </a>
-            <a class="navbar-item has-text-white">
-              Documentation
-            </a>
-            <span class="navbar-item has-text-white">
-              <a class="button is-primary is-inverted">
-                <span class="icon">
-                  <i class="fa fa-github"></i>
-                </span>
-                <span>Download</span>
-              </a>
-            </span>
-          </div>
-        </div>
-      </div>
-    </nav>
-  </div>
-  <div class="hero-body has-text-centered">
-    <div class="columns is-mobile is-centered">
-      <div class="column is-half is-narrow">
-        <div class="field has-addons">
-          <div class="control is-expanded">
-            <input class="input" type="text" placeholder="Find a repository">
-          </div>
-          <div class="control">
-            <a class="button is-info">
-              Search
-            </a>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-  <div class="hero-foot">
-    <nav class="tabs is-boxed is-fullwidth">
-      <div class="container">
-        <ul>
-          <li class="is-active"><a>Overview</a></li>
-          <li><a class="has-text-white">Modifiers</a></li>
-          <li><a class="has-text-white">Grid</a></li>
-          <li><a class="has-text-white">Elements</a></li>
-          <li><a class="has-text-white">Components</a></li>
-          <li><a class="has-text-white">Layout</a></li>
-        </ul>
-      </div>
-    </nav>
-  </div>
-</section>
-{% endcapture %}
-
-{% capture carousel_js %}
-<script type="text/javascript" src="/node_modules/bulma-extensions/bulma-carousel/dist/bulma-carousel.min.js"></script>
-{% endcapture %}
-
 
 <section class="section">
   <div class="container">
@@ -341,152 +39,13 @@ variables:
         </div>
       </div>
     </div>
-    {%
-      include meta.html
-      javascript=true
-      variables=true
-    %}
-
-    <hr>
-
-    <div class="message is-info">
+    
+    <article class="message is-warning">
       <div class="message-body">
-        <div class="content">
-          This extension is based on the wonderful job done by <a href="https://codepen.io/ShamanisTe/pen/aNjRMZ?q=flexbox+carousel&limit=all&type=type-pens" target="_blank">Killian Charpentier</a>.
-        </div>
+        Full documentation and demos of this component are now available on <a href="http://creativebulma.net//product/calendar"
+          target="_blank">CreativeBulma</a>.
       </div>
-    </div>
-    <p>This carousel is handling swipe (by touch and/or mouse) to slide between items.</p>
-
-    <hr>
-    {% include snippet.html content=carousel_example size="one-half" more=true %}
-
-    <hr>
-    <h4 class="subtitle">You can display multiple items (usefull to display list of partners for example)</h4>
-    {% include snippet.html content=carousel_5_example horizontal=true more=true %}
-
-    {% include anchor.html name="Navigation" %}
-    <h4 class="subtitle">You can modify the way to display the navigation container</h4>
-    {% include snippet.html content=carousel_example size="one-half" more=true %}
-    <h4 class="subtitle">Centered</h4>
-    {% include snippet.html content=carousel_navigation_centered_example size="one-half" more=true %}
-    <h4 class="subtitle">Overlay</h4>
-    {% include snippet.html content=carousel_navigation_overlay_example size="one-half" more=true %}
-
-    {% include anchor.html name="AutoPlay" %}
-    <p>You can set the carousel to autoPlay by adding the <code>data-autoplay="true"</code> attribute to the carousel element.</p>
-    <p>Manage the delay between slides by adding the <code>data-delay="5000"</code> attribute (default value is 5s).</p>
-    {% include snippet.html content=carousel_autoplay_example size="one-half" more=true %}
-
-    {% include anchor.html name="Animation" %}
-    <p>You can animate the carousel by using the <code>carousel-animated</code> along with either the <code>carousel-animate-slide</code> or <code>carousel-animate-fade</code> modifiers directly on the carousel element.</p>
-    {% include snippet.html content=carousel_fade_example size="one-half" more=true %}
-    </div>
-
-    {% include anchor.html name="Hero Carousel" %}
-    <p>You can use the carousel within a <code>.hero</code> by using <code>.hero-carousel</code> instead of <code>.carousel</code> to the main container</p>
-  </div>
-</section>
-<section class="section is-fullwidth">
-    {% include snippet.html content=hero_carousel_example horizontal=true more=true %}
-</section>
-<section class="section">
-  <div class="container">
-    {% include anchor.html name="Javascript" %}
-    <div class="message is-info">
-      <h4 class="message-header">Javascript</h4>
-      <div class="message-body">
-        <div class="content">
-          <p>The extension comes with a JavaScript implementation to manage carousel items navigation. Don't forget to include it in your project.</p>
-
-          {% highlight javascript %}{{ carousel_js }}{% endhighlight %}
-
-          <p>Then just add the following code once your DOM's ready:</p>
-          {% highlight javascript %}var carousels = bulmaCarousel.attach(); // carousels now contains an array of all Carousel instances{% endhighlight %}
-
-          <hr />
-          <p>You can react on different events by using {% highlight javascript %}CarouselInstance.on('carousel:ready', function(item) {});{% endhighlight %}</p>
-          <table class="table is-bordered">
-            <thead>
-              <tr>
-                <th class="is-narrow">Name</th>
-                <th class="is-narrow">Triggered at</th>
-              </tr>
-            </thead>
-            <tbody>
-              <tr>
-                <td class="is-narrow">
-                  <code>carousel:ready</code>
-                </td>
-                <td class="is-narrow">
-                  once carousel has been iniatited
-                </td>
-              </tr>
-              <tr>
-                <td class="is-narrow">
-                  <code>carousel:slide:before</code>
-                </td>
-                <td class="is-narrow">
-                  just before sliding
-                </td>
-              </tr>
-              <tr>
-                <td class="is-narrow">
-                  <code>carousel:slide:after</code>
-                </td>
-                <td class="is-narrow">
-                  just after sliding
-                </td>
-              </tr>
-            </tbody>
-          </table>
-          <p>Each event send an object as parameter with following properties: </p>
-          <table class="table is-bordered">
-            <thead>
-              <tr>
-                <th class="is-narrow">Property</th>
-                <th class="is-narrow">Description</th>
-              </tr>
-            </thead>
-            <tbody>
-              <tr>
-                <td class="is-narrow">
-                  <code>carousel</code>
-                </td>
-                <td class="is-narrow">
-                  The carousel instance that triggered the event.
-                </td>
-              </tr>
-              <tr>
-                <td class="is-narrow">
-                  <code>node</code>
-                </td>
-                <td class="is-narrow">
-                  The Node element related to the current slide item.
-                </td>
-              </tr>
-              <tr>
-                <td class="is-narrow">
-                  <code>pos</code>
-                </td>
-                <td class="is-narrow">
-                  The position (items relative) of the current item.
-                </td>
-              </tr>
-            </tbody>
-          </table>
-        </div>
-      </div>
-    </div>
-
-    {% include variables.html %}
+    </article>
 
   </div>
 </section>
-
-<script type="text/javascript" src="{{ site.url }}/node_modules/bulma-extensions/bulma-carousel/dist/js/bulma-carousel.js"></script>
-<script>
-document.addEventListener('DOMContentLoaded', function(){
-  var carousels = bulmaCarousel.attach();
-}, false);
-</script>
