fix carousel demo link

--- a/components/carousel.html
+++ b/components/carousel.html
@@ -42,7 +42,7 @@ npm-version: 4.0.1
     
     <article class="message is-warning">
       <div class="message-body">
-        Full documentation and demos of this component are now available on <a href="http://creativebulma.net//product/calendar"
+        Full documentation and demos of this component are now available on <a href="http://creativebulma.net//product/carousel"
           target="_blank">CreativeBulma</a>.
       </div>
     </article>
