update to last version

--- a/components/calendar.html
+++ b/components/calendar.html
@@ -3,7 +3,7 @@ title: Calendar
 layout: documentation
 doc-tab: components
 doc-subtab: calendar
-npm-version: 5.0.1
+npm-version: 6.0.4
 ---
 
 {% include subnav-components.html %}
@@ -40,7 +40,7 @@ npm-version: 5.0.1
     </div>
     <article class="message is-warning">
       <div class="message-body">
-        Full documentation and demos of this component are now available on <a href="http://creativebulma.net//product/calendar"
+        Full documentation and demos of this component are now available on <a href="https://creativebulma.net/product/calendar/demo"
           target="_blank">CreativeBulma</a>.
       </div>
     </article>
