--- a/components/carousel.html
+++ b/components/carousel.html
@@ -4,7 +4,7 @@ description: Display a Image / Content carousel
 layout: documentation
 doc-tab: components
 doc-subtab: carousel
-npm-version: 4.0.1
+npm-version: 4.0.4
 ---
 
 {% include subnav-components.html %}
@@ -42,7 +42,8 @@ npm-version: 4.0.1
     
     <article class="message is-warning">
       <div class="message-body">
-        Full documentation and demos of this component are now available on <a href="http://creativebulma.net//product/carousel"
+        Full documentation and demos of this component are now available on <a
+          href="https://creativebulma.net/product/carousel/demo"
           target="_blank">CreativeBulma</a>.
       </div>
     </article>
