fix(sass): Use tooltip sass

--- a/css/documentation.sass
+++ b/css/documentation.sass
@@ -5,6 +5,7 @@
 
 @import 'bulma-docs.sass'
 @import 'bulma-extensions/dist/css/bulma-extensions.sass'
+@import 'bulma-tooltip/src/sass/index.sass'
 
 .modal
   z-index: 40
