try to fix gh-pages

--- a/css/documentation.sass
+++ b/css/documentation.sass
@@ -3,24 +3,24 @@
 
 @charset "utf-8"
 
-@import 'bulma-docs.sass'
-@import "bulma-accordion/src/sass/index.sass"
-@import "bulma-badge/src/sass/index.sass"
-@import "bulma-calendar/src/sass/index.sass"
-@import "bulma-carousel/src/sass/index.sass"
-@import "bulma-checkradio/src/sass/index.sass"
-@import "bulma-divider/src/sass/index.sass"
-@import "bulma-iconpicker/src/sass/index.sass"
-@import "bulma-pageloader/src/sass/index.sass"
-@import "bulma-pricingtable/src/sass/index.sass"
-@import "bulma-quickview/src/sass/index.sass"
-@import "bulma-ribbon/src/sass/index.sass"
-@import "bulma-slider/src/sass/index.sass"
-@import "bulma-steps/src/sass/index.sass"
-@import "bulma-switch/src/sass/index.sass"
-@import "bulma-tagsinput/src/sass/index.sass"
-@import "bulma-timeline/src/sass/index.sass"
-@import 'bulma-tooltip/src/sass/index.sass'
+@import '../node_modules/bulma-docs.sass'
+@import "../node_modules/bulma-accordion/src/sass/index.sass"
+@import "../node_modules/bulma-badge/src/sass/index.sass"
+@import "../node_modules/bulma-calendar/src/sass/index.sass"
+@import "../node_modules/bulma-carousel/src/sass/index.sass"
+@import "../node_modules/bulma-checkradio/src/sass/index.sass"
+@import "../node_modules/bulma-divider/src/sass/index.sass"
+@import "../node_modules/bulma-iconpicker/src/sass/index.sass"
+@import "../node_modules/bulma-pageloader/src/sass/index.sass"
+@import "../node_modules/bulma-pricingtable/src/sass/index.sass"
+@import "../node_modules/bulma-quickview/src/sass/index.sass"
+@import "../node_modules/bulma-ribbon/src/sass/index.sass"
+@import "../node_modules/bulma-slider/src/sass/index.sass"
+@import "../node_modules/bulma-steps/src/sass/index.sass"
+@import "../node_modules/bulma-switch/src/sass/index.sass"
+@import "../node_modules/bulma-tagsinput/src/sass/index.sass"
+@import "../node_modules/bulma-timeline/src/sass/index.sass"
+@import "../node_modules/bulma-tooltip/src/sass/index.sass"
 
 .modal
   z-index: 40
